2017-12-31  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/* src/*: remove bool header and bool type

2017-12-30  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/misc.c (ficl_environ): Returns a hash instead of an
	assoc array.

2017-12-29  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/proc.c: local-variables moved from array to hash.
	
	* examples/site-lib/clm.fs (with-sound): Add option :to-dac.

2017-12-27  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* ficl/primitive.c:
	* ficl/vm.c:
	* src/fth.h:
	* src/number.c: FTH_FLOAT_P renamed to FTH_FLOAT_T_P.
	FTH_FLOAT_P is now an alias for FTH_NUMBER_P.

2017-12-26  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/utils.c (history-lineno, history-next, history-prev):
	New words added.

	* src/utils.c (history): New command gl-add added.

2017-12-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/proc.c (ficl_get_help): Returns the help string
	instead of printing it.  The repl prints it.

2017-12-22  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (with-sound): Add run-reverb.
	* examples/site-lib/clm.fs (with-sound): Add option :to-snd.

2017-12-18  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (sound-let): Some bugs fixed.

2017-12-16  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/fth-lib/fth.fs (stack-check): New function.

	* src/misc.c (ADD_TO_LOAD_PATH): Remove trailing slash from
	path if any.

	* examples/site-lib/clm.fs (with-sound): Catch all exceptions
	to reset variables before finish.

2017-12-15  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/effects.fs: effects-cross-synthesis is
	an alias for cross-synthesis from examp.fs.

	* examples/site-lib/examp.fs: Fix expsrc, cross-synthesis,
	voiced->unvoiced, pulse-voice.

2017-12-07  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/popup.fs: Remove some bugs in edhist.
