@@ -25,10 +25,10 @@
  */
 
 #if !defined(lint)
-const char libfth_sccsid[] = "@(#)misc.c	2.2 1/2/18";
+const char libfth_sccsid[] = "@(#)misc.c	2.3 1/3/18";
 #endif /* not lint */
 
-#define FTH_DATE		"2018/01/02"
+#define FTH_DATE		"2018/01/03"
 
 #if defined(HAVE_CONFIG_H)
 #include "config.h"
